# family-budget-app

./: .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci-api.yml  ci-web.yml
.opencode/plans/: github-ci-docker.md
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  main.py
apps/api/app/db/: supabase.py
apps/api/app/models/: __init__.py  account.py  allowance.py  annual_budget.py  budget.py  category.py  exchange_rate.py  investment.py  report.py  transaction.py
apps/api/app/routers/: accounts.py  allowances.py  annual_budgets.py  budgets.py  categories.py  exchange_rates.py  investments.py  reports.py  transactions.py
apps/api/app/services/: currency_service.py
apps/web/: .env.example  Dockerfile  README.md  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/components/: providers.tsx
apps/web/components/dashboard/: allowance-status.tsx  budget-overview.tsx  dashboard-stats.tsx  recent-transactions.tsx
apps/web/components/forms/: account-dialog.tsx  allowance-dialog.tsx  annual-budget-dialog.tsx  budget-dialog.tsx  category-dialog.tsx  (+3 more)
apps/web/hooks/: use-accounts.ts  use-allowances.ts  use-annual-budgets.ts  use-budgets.ts  use-categories.ts  use-investments.ts  use-transactions.ts
apps/web/lib/: api.ts  utils.ts
supabase/migrations/: 001_initial_schema.sql  002_named_allowances.sql  003_annual_budgets.sql
(+21 files in other folders)
